temporarily disable randomTurns and resolve the answerBox overflow issue

--- a/frontend/src/guessai/index.scss
+++ b/frontend/src/guessai/index.scss
@@ -455,8 +455,9 @@ body, .App{
         .answerBox{
           max-width: 100%;
           width: 250px;
-          height: 364px;
           border-radius: 6px;
+          display: table;
+          overflow: scroll;
           padding: 10px;
           margin:32px 10px;
           box-shadow:$shadow;
@@ -467,12 +468,14 @@ body, .App{
               margin: 0;
             }
             .answerList{
-              display: flex;
-              flex-direction: row;
+              
+              
+              flex-direction: column;
               align-content: left;
               flex-wrap: wrap;
               .answer{
-             
+                width: fit-content;
+                overflow: auto;
                 font: {
                   family: "share tech mono", "monospace";
                   size: 14px;
